--- a/src/components/semaforo/semaforo.module.css
+++ b/src/components/semaforo/semaforo.module.css
@@ -53,3 +53,56 @@
   width: 100%;
   z-index: 1;
 }
+
+.containerTrafficLigth {
+  padding: .75rem;
+  display: flex;
+  gap: 2rem;
+}
+
+.containerVelocityBoard {
+  display: flex;
+  align-items: end;
+  gap: .25rem;
+  margin: 0 0 .5rem;
+}
+
+.btnVelocityLess,
+.btnVelocityMore,
+.btnReset {
+  padding: .25rem .75rem;
+  font-size: 16px;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
+  font-weight: 600;
+}
+
+.btnVelocityMore {
+  background-color: #1900a5;
+  color: #fff;
+}
+
+.btnVelocityLess {
+  background-color: #a50000;
+  color: #fff;
+}
+
+.btnReset {
+  background-color: #ffd000;
+  color: #000;
+}
+
+.labelTt {
+  color: black;
+  font-size: 14px;
+  font-weight: 600;
+  margin: 0 0 .25rem;
+}
+
+.inputVelocity {
+  width: 50px;
+  padding: .25rem .75rem;
+  border-radius: 8px;
+}
